Fix contrast with nav menu

--- a/campus-dark.css
+++ b/campus-dark.css
@@ -89,3 +89,19 @@ table.quizreviewsummary th.cell{
 table.quizreviewsummary td.cell{
     background-color: #282c34 !important;
 }
+
+nav.navbar .navbar-brand+.navbar-nav>.nav-item .nav-link {
+    background-color: #282c34 !important;
+}
+
+body nav.navbar .navbar-brand+.navbar-nav>.nav-item .nav-link:hover{
+    background-color: #373e48 !important;
+}
+
+#nav-drawer .list-group div.list-group-item:hover .media .media-body {
+    color: inherit !important;
+}
+
+body a:hover {
+    color: #58a4b7 !important;
+}
